[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/CharDirectionUI.gd" type="Script" id=1]
[ext_resource path="res://assets/UI_16x16.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 48, 16, 16, 16 )

[node name="CharDirection" type="VBoxContainer"]
margin_right = 70.0
margin_bottom = 56.0
rect_min_size = Vector2( 70, 56 )
size_flags_vertical = 0
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="Up" type="TextureButton" parent="."]
margin_left = 27.0
margin_right = 43.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource( 21 )

[node name="Hbox" type="HBoxContainer" parent="."]
margin_top = 16.0
margin_right = 70.0
margin_bottom = 32.0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.7
custom_constants/separation = 0
alignment = 1

[node name="Left" type="TextureButton" parent="Hbox"]
margin_left = 9.0
margin_right = 25.0
margin_bottom = 16.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = SubResource( 22 )

[node name="Right" type="TextureButton" parent="Hbox"]
margin_left = 44.0
margin_right = 60.0
margin_bottom = 16.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = SubResource( 23 )

[node name="Down" type="TextureButton" parent="."]
margin_left = 27.0
margin_top = 32.0
margin_right = 43.0
margin_bottom = 48.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource( 24 )

[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Hbox/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Hbox/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
